# git-action

./: README.md  docker-compose.yml  package-lock.json  package.json  task-definition.json
.github/workflows/: ci-cd.yml
backend/: .dockerignore  Dockerfile  config.py  database.py  main.py  pyproject.toml  security.py  utils.py
backend/controllers/: auth_controller.py  comment_controller.py  like_controller.py  post_controller.py  user_controller.py
backend/models/: comment_model.py  like_model.py  post_model.py  user_model.py
backend/routes/: auth_route.py  comment_route.py  like_route.py  post_route.py  user_route.py
frontend/: Dockerfile  default.conf
frontend/public/css/: board.css  common.css  edit_password.css  edit_post.css  edit_profile.css  login.css  post_detail.css  signup.css  write.css
frontend/public/js/core/: api.js  config.js  utils.js
frontend/public/js/pages/: board.js  edit_password.js  edit_post.js  edit_profile.js  header.js  login.js  post_detail.js  signup.js  write.js
frontend/views/: board.html  edit_password.html  edit_post.html  edit_profile.html  login.html  post_detail.html  signup.html  write.html
